<resources>
    <string name="app_name">Mobile Trade Binder</string>
    <string name="title_list_activity">List Activity</string>

    <string name="action_settings">Settings</string>
    <string name="gps_button">Start the GPS Service</string>
    <string name="list_activity_button">View Card List</string>
    <string name="message_description">Enter Message:</string>
    <string name="send_message_button">Send Message</string>
    <string name="add_card_button">Add Card</string>
    <string name="add_item_text">Enter card name</string>
    <string name="view_cards_button">All Cards</string>
    <string name="fragmentEditText1_label">Expansion: </string>
    <string name="fragmentEditText2_label">Language: </string>
    <string name="fragmentLabel3">Condition: </string>
    <string name="my_cards_fragment_title">My Cards</string>
    <string name="my_trades_fragment_title">My Trades</string>
    <string name="wanted_cards_title">Wanted Cards</string>
    <string name="map_fragment_title">Google Maps</string>
    <string name="location_title_hint">Who are you trading with?</string>
    <string name="location_description_hint">What are the details of the trade?</string>
    <string name="location_button">Add Trade</string>
    <string name="view_markers_button">All Trades</string>
    <string name="clear_list_button">Clear List</string>
    <string name="open_camera_button">Add Image</string>
    <string name="delete_card_button">Delete Card</string>
    <string name="trade_dialog_text">All Trades</string>
    <string name="about_button">About</string>
    <string name="welcome_message">Welcome to Mobile Trade Binder! Add cards to your trade binder
        by clicking the Add Card and All Cards buttons. You can keep track of cards you are
        looking for and add pictures of cards you have for trade. You can also keep track of your
        trades using the Add Trade and All Trades buttons. Trades will show up in the map
        view to show you where your scheduled trades are.</string>

    <string-array name="condition_array">
        <item>NM</item>
        <item>LP</item>
        <item>MP</item>
        <item>HP</item>
        <item>D</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
