<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.virginia.cs.cs4720androidproject.ListEntryFragment"
    android:id="@+id/fragment_layout">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentEditText1"
        android:text=""
        android:layout_weight="1"
        android:layout_alignTop="@+id/fragmentLabel2"
        android:layout_toRightOf="@+id/fragmentLabel2"
        android:layout_toEndOf="@+id/fragmentLabel2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentEditText2"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/fragmentLabel1"
        android:layout_toEndOf="@+id/fragmentLabel1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentEditText1_label"
        android:id="@+id/fragmentLabel1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentEditText2_label"
        android:id="@+id/fragmentLabel2"
        android:layout_below="@+id/fragmentEditText2"
        android:layout_alignLeft="@+id/fragmentSpinnerLabel"
        android:layout_alignStart="@+id/fragmentSpinnerLabel" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragmentSpinner"
        android:spinnerMode="dropdown"
        android:entries="@array/condition_array"
        android:layout_below="@+id/fragmentEditText1"
        android:layout_toRightOf="@+id/fragmentSpinnerLabel"
        android:layout_toEndOf="@+id/fragmentSpinnerLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentLabel3"
        android:id="@+id/fragmentSpinnerLabel"
        android:layout_alignTop="@+id/fragmentSpinner"
        android:layout_toLeftOf="@+id/fragmentEditText2"
        android:layout_toStartOf="@+id/fragmentEditText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_card_button"
        android:id="@+id/deleteCardButton"
        android:layout_below="@+id/fragmentSpinner"
        android:layout_alignRight="@+id/fragmentEditText1"
        android:layout_alignEnd="@+id/fragmentEditText1" />

</RelativeLayout>
